# openvdb-render

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindArnold.cmake  FindMaya.cmake  FindMtoA.cmake  FindUSD.cmake  FindUSDArnold.cmake
docs/: contribution.md  luma_style.xml
extension/: CMakeLists.txt  openvdb_translator.cpp  openvdb_translator.h  plugin.cpp  sampler_translator.cpp  sampler_translator.h  shader_params_translator.h  shader_translator.cpp  shader_translator.h  simple_shader_translator.cpp  simple_shader_translator.h
katana/Args/: openvdb_simple_shader.args
plugin/: CMakeLists.txt  blackbody.cpp  blackbody.h  draw_utils.cpp  draw_utils.h  gradient.hpp  main.cpp  point_sorter.cu  point_sorter.h  progress_bar.cpp  progress_bar.h  shader_mode.h  vdb_draw_override.cpp  vdb_draw_override.h  vdb_geometry_override.cpp  vdb_geometry_override.h  vdb_maya_utils.hpp  vdb_query.cpp  vdb_query.h  vdb_sampler.cpp  vdb_sampler.h  vdb_shader.cpp  vdb_shader.h  vdb_simple_shader.cpp  vdb_simple_shader.h  vdb_sliced_display.cpp  vdb_sliced_display.h  vdb_subscene_override.cpp  vdb_subscene_override.h  vdb_subscene_utils.hpp  vdb_visualizer.cpp  vdb_visualizer.h  volume_sampling.hpp
plugin/template/: AEvdb_samplerTemplate.py  AEvdb_shaderTemplate.py  AEvdb_visualizerTemplate.py  channelController.py
shader/: CMakeLists.txt  gradient.hpp  loader.cpp  openvdb_sampler.cpp  openvdb_shader.cpp  openvdb_simple_shader.cpp
usd/: CMakeLists.txt
usd/writer/: CMakeLists.txt  VdbVisualizerWriter.cpp  VdbVisualizerWriter.h  plugInfo.json.in  plugin.cpp
util/: gradient_base.hpp  maya_utils.hpp  node_ids.h
